# procg_qso

./: .gitignore  CHANGELOG.md  LICENSE  generating_qsos_in_jupyter.md  primer.md  pyproject.toml
.github/workflows/: ci.yml
.ipynb_checkpoints/: README-checkpoint.md
docs/: primer.md
examples/: 25_12_5_516364.txt  25_13_2_154022.txt  25_13_4_639283.txt  25_13_6_920499.txt  25_14_5_212580.txt  25_15_4_356529.txt  25_15_7_973424.txt  25_16_2_901779.txt  25_17_3_994230.txt  25_17_5_578996.txt  qso_w13_d0.txt  qso_w13_d2.txt  qso_w18_d0.txt  qso_w18_d2.txt  qso_w25_d0.txt  qso_w25_d2.txt
notebooks/: Instructions.ipynb  wordy_qso_25_12farnsworth.txt  wordy_qso_25_12farnsworth_tougher_noise.txt  wordy_qso_25_14farnsworth.txt
notebooks/practice/: 25_12_3_909646.txt  25_12_5_344339.txt  25_13_2_909963.txt  25_13_3_319392.txt  25_13_3_364939.txt  25_13_4_15110.txt  25_13_4_542070.txt  25_13_4_671535.txt  25_13_4_779426.txt  25_13_4_794738.txt  25_13_4_819227.txt  25_13_5_535455.txt  25_14_2_809002.txt  25_14_2_897279.txt  25_14_3_125323.txt  25_14_3_168931.txt  25_14_3_350794.txt  25_14_3_417839.txt  25_14_3_752102.txt  25_14_4_378319.txt  25_14_4_702717.txt  25_14_4_997192.txt  25_14_5_38347.txt  25_14_5_485478.txt  25_15_2_186529.txt  25_15_2_345653.txt  25_15_2_773879.txt  25_15_2_781625.txt  25_15_3_265731.txt  25_15_3_889740.txt  25_15_4_144151.txt  25_15_4_479184.txt  25_15_4_929799.txt  25_15_5_730862.txt  25_15_5_756341.txt  25_15_6_00.txt  25_15_6_01.txt  25_15_6_02.txt  25_15_6_03.txt  25_15_6_04.txt  (+18 more)
src/procg_qso/: __init__.py  (+5 more)
tests/: test_procg_qso.py
(+15 files in other folders)
