[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "procg_qso"
version = "0.1.0"
description = "Procedural CW (Morse) QSO generator with band-condition simulation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10"]
keywords = ["morse", "cw", "amateur-radio", "ham-radio", "qso", "training"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
procg_qso = "procg_qso.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
